Game board no longer overflows into chat area

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -144,6 +144,7 @@ a {
   position: relative;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 
   .component {
     position: absolute;
